--- a/client/src/FareTable.css
+++ b/client/src/FareTable.css
@@ -2,7 +2,6 @@ table {
 	border-collapse: collapse;
 	background-color: black;
 	border-radius: 1.5rem;
-	opacity: 0.85;
 	overflow: hidden;
 	width: 65%;
 }
@@ -13,7 +12,7 @@ th {
 }
 
 th {
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.65);
 	padding-bottom: 0.75rem;
 	padding-top: 0.75rem;
 }
