--- a/client/src/FareTable.css
+++ b/client/src/FareTable.css
@@ -1,6 +1,6 @@
 table {
 	border-collapse: collapse;
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.65);
 	border-radius: 1.5rem;
 	overflow: hidden;
 	width: 65%;
