--- a/client/src/Footer.css
+++ b/client/src/Footer.css
@@ -3,7 +3,7 @@ footer {
 	background: black;
 	bottom: 0;
 	display: flex;
-	height: 5vh;
+	height: 3rem;
 	justify-content: space-around;
 	width: 100vw;
 }
@@ -18,6 +18,6 @@ footer div {
 	footer {
 		flex-direction: column;
 		justify-content: space-evenly;
-		height: 20vh;
+		height: 12rem;
 	}
 }
