--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,3 +8,16 @@
 	padding: 0;
 	text-align: center;
 }
+
+.fade-in {
+	animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
