--- a/client/src/Form.css
+++ b/client/src/Form.css
@@ -11,7 +11,8 @@ form img {
 	width: 1.5rem;
 }
 
-input {
+input,
+select {
 	background-color: gray;
 	border-radius: 0.5rem;
 	border: none;
@@ -29,7 +30,9 @@ input[type="submit"] {
 	border-radius: 1.5rem;
 	cursor: pointer;
 }
-input:not([type="checkbox"]):hover {
+
+input:not([type="checkbox"]):hover,
+select:hover {
 	background-color: rgb(100, 100, 100);
 }
 
