--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,8 +16,10 @@
 @keyframes fadeIn {
 	0% {
 		opacity: 0;
+		transform: scale(1.1, 1.1);
 	}
 	100% {
 		opacity: 1;
+		transform: scale(1, 1);
 	}
 }
