Added recent searches feature

--- a/client/src/FareTable.css
+++ b/client/src/FareTable.css
@@ -1,9 +1,30 @@
+.fare-table {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	width: 65%;
+}
+
+.fare-table svg {
+	cursor: default;
+}
+
+.table-info {
+	display: flex;
+	justify-content: center;
+}
+
+.table-stations {
+	align-items: center;
+	display: flex;
+	gap: 1rem;
+}
+
 table {
 	border-collapse: collapse;
 	background-color: rgba(0, 0, 0, 0.65);
 	border-radius: 1.5rem;
 	overflow: hidden;
-	width: 65%;
 }
 
 td,
@@ -22,15 +43,18 @@ tr:nth-child(odd) {
 }
 
 @media all and (min-width: 481px) and (max-width: 1099px) {
-	table {
+	.fare-table {
 		width: 100%;
 	}
 }
 
 @media all and (max-width: 480px) {
+	.fare-table {
+		width: 80vw;
+	}
+
 	table {
 		display: block;
 		overflow: scroll;
-		width: 80vw;
 	}
 }
