--- a/client/src/AppRouter.css
+++ b/client/src/AppRouter.css
@@ -1,22 +1,23 @@
-main {
-	background: black;
+.fade-in-translate {
+	animation: fadeInTranslate 2s;
+}
+
+.hero {
+	margin-top: 3rem;
+}
+
+.main-background {
+	background: rgba(0, 0, 0, 0.9);
 	background-size: cover;
 	background-position: center;
 	display: flex;
-	min-height: 95vh;
 	justify-content: center;
 	width: 100vw;
 }
 
 #main-container {
-	min-height: 90vh;
-	margin-top: 3rem;
 	overflow-x: visible;
 	width: 70%;
-}
-
-.fade-in-translate {
-	animation: fadeInTranslate 2s;
 }
 
 @keyframes fadeInTranslate {
@@ -37,12 +38,15 @@ main {
 }
 
 @media all and (max-width: 480px) {
+	.hero {
+		margin-top: 6rem;
+	}
+
 	main {
 		min-height: 100vh;
 	}
 
 	#main-container {
-		margin-top: 6rem;
 		width: 90%;
 	}
 }
