--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -13,7 +13,7 @@ h3 {
 	font-weight: 400;
 }
 
-#hero-text-container {
+.hero-text-container {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
