--- a/client/src/RecentSearchesButton.css
+++ b/client/src/RecentSearchesButton.css
@@ -7,7 +7,7 @@
 }
 
 #recent-searches-button-container {
-	height: 4.3rem;
+	height: 5rem;
 	transition: all 0.25s;
 }
 
@@ -28,5 +28,11 @@
 	}
 	100% {
 		top: 0;
+	}
+}
+
+@media all and (max-width: 480px) {
+	#recent-searches-button-container {
+		height: 7rem;
 	}
 }
