--- a/client/src/AppRouter.css
+++ b/client/src/AppRouter.css
@@ -15,9 +15,34 @@
 	width: 100vw;
 }
 
+.recent-search-button {
+	align-items: center;
+	background-color: red;
+	border-radius: 1rem;
+	cursor: pointer;
+	display: flex;
+	gap: 1rem;
+	justify-content: space-around;
+	padding: 1.5rem;
+	text-decoration: none;
+	transition: background-color 0.25s;
+	white-space: nowrap;
+	width: min-content;
+}
+
+.recent-search-button:hover {
+	background-color: rgb(200, 0, 0);
+}
+
 #main-container {
 	overflow-x: visible;
 	width: 70%;
+}
+
+#recent-search-button-container {
+	align-items: center;
+	display: flex;
+	gap: 2rem;
 }
 
 @keyframes fadeInTranslate {
@@ -48,5 +73,9 @@
 
 	#main-container {
 		width: 90%;
+	}
+
+	#recent-search-button-container {
+		flex-direction: column;
 	}
 }
