--- a/client/src/Form.css
+++ b/client/src/Form.css
@@ -1,21 +1,8 @@
-form {
-	background-color: rgba(0, 0, 0, 0.65);
-	border-radius: 1.5rem;
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	padding: 1rem;
-}
-
-form img {
-	width: 1.5rem;
-}
-
 input,
 select {
 	background-color: gray;
-	border-radius: 0.5rem;
 	border: none;
+	border-radius: 0.5rem;
 	height: 2rem;
 	font-weight: 500;
 	transition: background-color 0.25s;
@@ -81,17 +68,26 @@ label {
 	gap: 1rem;
 }
 
+#search-form {
+	background-color: rgba(0, 0, 0, 0.65);
+	border-radius: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	padding: 1rem;
+}
+
+#search-form img {
+	width: 1.5rem;
+}
+
 @media all and (min-width: 769px) and (max-width: 1099px) {
-	form {
+	#search-form {
 		width: 100%;
 	}
 }
 
 @media all and (max-width: 480px) {
-	form {
-		width: 100%;
-	}
-
 	.input-column {
 		flex: auto;
 		margin: 0.5rem auto;
@@ -106,5 +102,9 @@ label {
 		align-items: center;
 		flex-direction: column;
 		gap: 1rem;
+	}
+
+	#search-form {
+		width: 100%;
 	}
 }
