--- a/client/src/Dialog.css
+++ b/client/src/Dialog.css
@@ -4,6 +4,7 @@ body {
 
 .dialog-bar {
 	display: flex;
+	flex-shrink: 0;
 	padding: 1rem;
 }
 
@@ -23,6 +24,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	max-height: 80vh;
 	max-width: 80%;
 	transition: opacity 0.5s;
 }
@@ -75,7 +77,7 @@ body {
 #dialog-root {
 	backdrop-filter: 0;
 	display: flex;
-	height: 100%;
+	height: 100vh;
 	inset: 0;
 	justify-content: center;
 	position: absolute;
@@ -98,5 +100,11 @@ body {
 @media all and (min-width: 1100px) {
 	#dialog-container {
 		max-width: 50%;
+	}
+}
+
+@media all and (max-width: 480px) {
+	#dialog-container {
+		max-width: 100%;
 	}
 }
