--- a/src/Form.css
+++ b/src/Form.css
@@ -1,140 +1,150 @@
-input,
-select {
-	background-color: gray;
-	border: none;
+form {
+	background-color: rgb(54, 55, 58);
 	border-radius: 0.5rem;
-	height: 2rem;
-	font-weight: 500;
-	transition: background-color 0.25s;
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3), 0 4px 8px 3px rgba(0, 0, 0, 0.15);
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 1.25rem;
+	padding: 0.5rem 1rem 3rem;
 	width: 100%;
 }
 
-input[type="checkbox"] {
-	width: 1.25rem;
+form > div:first-child {
+	gap: 0.25rem;
+	margin-bottom: 0.5rem;
 }
 
-input[type="submit"] {
-	border-radius: 1.5rem;
-	cursor: pointer;
-}
-
-input:not([type="checkbox"]):hover,
-select:hover {
-	background-color: rgb(100, 100, 100);
-}
-
-label {
-	display: block;
-	margin-bottom: 0.25rem;
-	white-space: nowrap;
-}
-
-sup {
-	font-size: 0.75rem;
-}
-
-.checkbox {
-	align-items: center;
-	display: flex;
-	flex-wrap: no-wrap;
-	gap: 1rem;
-}
-
-.dropdown {
-	transition: transform 0.25s;
-}
-
-.input-column {
-	flex: 1;
+li,
+.number-row div span {
+	color: #c3c3c4 !important;
 }
 
 .input-row {
 	align-items: center;
 	display: flex;
-	gap: 1rem;
-	justify-content: space-around;
+	width: 100%;
 }
 
-.menu-select {
+.number-button-disabled {
+	background-color: #4c4d50;
+	pointer-events: none;
+	transition: all 0.15s linear;
+}
+
+.number-button-disabled svg {
+	color: #606064;
+	transition: all 0.15s linear;
+}
+
+.number-button-enabled {
+	background-color: #394457;
+	cursor: pointer;
+	transition: all 0.15s linear;
+}
+
+.number-button-enabled:hover {
+	background-color: #3e495e;
+}
+
+.number-button-enabled svg {
+	color: #dbdde1;
+	transition: all 0.15s linear;
+}
+
+.number-row {
+	cursor: default !important;
+	display: flex;
+	gap: 2rem;
+	justify-content: space-between !important;
+}
+
+.number-row:hover {
+	background-color: transparent !important;
+}
+
+.number-row button {
+	align-items: center;
+	border: none;
+	border-radius: 0.25rem;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	padding: 0.35rem;
+}
+
+.number-row button svg {
+	height: 1.25rem;
+	width: 1.25rem;
+}
+
+.number-row > div:first-child {
+	display: flex;
+	flex-direction: column;
+}
+
+.number-row > div:first-child span {
+	width: min-content;
+}
+
+.number-row > div:first-child span:last-child {
+	font-size: 0.75rem;
+}
+
+.number-row > div:last-child {
 	align-items: center;
 	display: flex;
 	gap: 1rem;
 }
 
-.menu-select input,
-.menu-select select {
-	min-width: 10rem;
+.number-row > div:last-child span {
+	width: 1rem;
 }
 
-.menu-select label {
-	flex-shrink: 0;
+.secondary-input {
+	border-radius: 0.25rem;
+	color: #c3c3c4 !important;
+	height: 2.25rem;
+	font-size: 0.9rem !important;
 }
 
-.options-toggle {
-	display: flex;
-	cursor: pointer;
-	gap: 0.5rem;
-	width: min-content;
+.secondary-input:hover {
+	background-color: #3d4149 !important;
 }
 
-#more-options {
-	display: flex;
-	justify-content: space-between;
+.secondary-input svg[data-testid="PersonOutlineIcon"] {
+	max-height: 1.25rem;
 }
 
-#options-container {
-	display: flex;
+.secondary-select > svg:last-child {
+	color: #c3c3c4;
+	margin-right: 0.5rem;
+	width: 1.25rem;
+}
+
+.secondary-select {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
+
+#middle-row {
 	flex-wrap: wrap;
 	gap: 1rem;
-	justify-content: center;
+	justify-content: space-around;
 }
 
-#search-form {
-	background-color: rgba(0, 0, 0, 0.65);
-	border-radius: 1.5rem;
+#middle-row > div {
+	flex: 1 1;
+	min-width: 6rem;
+}
+
+#number-options {
 	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	padding: 1rem;
+	gap: 0.25rem;
+	justify-content: flex-end;
+	padding: 0.5rem 1rem;
 }
 
-#search-form img {
-	width: 1.5rem;
-}
-
-@media all and (min-width: 769px) and (max-width: 1099px) {
-	#search-form {
-		width: 100%;
-	}
-}
-
-@media all and (max-width: 480px) {
-	.input-column {
-		flex: auto;
-		margin: 0.5rem auto;
-		width: 100%;
-	}
-
-	.input-row {
-		flex-wrap: wrap;
-	}
-
-	#more-options {
-		align-items: center;
-		flex-direction: column;
-		gap: 1rem;
-	}
-
-	#search-form {
-		width: 100%;
-	}
-}
-
-@keyframes highlight {
-	0% {
-		transform: scale(1.25, 1.25);
-	}
-	100% {
-		transform: scale(1, 1);
-	}
+#number-options button {
+	border-radius: 1rem;
+	padding: 0.375rem 1rem;
 }
