--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 h1 {
-	font-size: 5rem;
+	font-size: 3.5rem;
 	font-weight: 500;
 }
 
@@ -13,16 +13,15 @@ h3 {
 	font-weight: 400;
 }
 
-.hero-text-container {
+#hero-container {
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	gap: 2rem;
-	height: 100%;
-	justify-content: space-around;
+	gap: 0.5rem;
+	justify-content: flex-start;
 	overflow-x: visible;
-	padding: 2rem 0;
 	position: relative;
+	top: -1.5rem;
 }
 
 #progress {
@@ -34,6 +33,10 @@ h3 {
 @media all and (max-width: 480px) {
 	h1 {
 		font-size: 3rem;
+	}
+
+	#hero-container {
+		top: -0.5rem;
 	}
 
 	#progress-train {
