--- a/src/Form.css
+++ b/src/Form.css
@@ -9,20 +9,61 @@ form {
 	width: 100%;
 }
 
+form svg[data-testid="CalendarMonthIcon"] {
+	color: white !important;
+}
+
+form svg[data-testid="ArrowDropDownIcon"] {
+	transition: transform 0.35s;
+}
+
 form > div:first-child {
-	gap: 0.25rem;
 	margin-bottom: 0.5rem;
 }
 
-li,
-.number-row div span {
-	color: #c3c3c4 !important;
+form > div:first-child .selected svg[data-testid="ArrowDropDownIcon"] {
+	transform: rotate(180deg);
+}
+
+form .MuiAutocomplete-input {
+	text-overflow: clip !important;
+}
+
+.MuiDayCalendar-weekContainer .Mui-selected {
+	color: white !important;
+}
+
+.MuiDayCalendar-weekDayLabel {
+	margin: 0 !important;
+}
+
+.MuiPickersDay-root {
+	border: none !important;
+	margin: 0 !important;
+	transition: none !important;
 }
 
 .input-row {
 	align-items: center;
 	display: flex;
 	width: 100%;
+}
+
+.input-row:first-child {
+	justify-content: space-between;
+}
+
+.input-row:first-child > * {
+	color: #c3c3c4 !important;
+}
+
+.input-row > div {
+	display: flex;
+}
+
+.MuiIconButton-root:hover,
+.not-selected:hover {
+	background-color: #3d4149 !important;
 }
 
 .number-button-disabled {
@@ -100,30 +141,108 @@ li,
 	width: 1rem;
 }
 
-.secondary-input {
+.number-row div span,
+#date-range-popover li {
+	background-color: transparent !important;
+	color: #c3c3c4 !important;
+}
+
+.options {
+	display: flex;
+	gap: 0.25rem;
+	justify-content: flex-end;
+	padding: 0.5rem 1rem;
+}
+
+.options button {
+	border-radius: 1rem;
+	padding: 0.375rem 1rem;
+}
+
+.select {
 	border-radius: 0.25rem;
 	color: #c3c3c4 !important;
-	height: 2.25rem;
 	font-size: 0.9rem !important;
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
 }
 
-.secondary-input:hover {
-	background-color: #3d4149 !important;
+.select[disabled=""] {
+	color: rgba(255, 255, 255, 0.3) !important;
 }
 
-.secondary-input svg[data-testid="PersonOutlineIcon"] {
+.select > div {
+	background-color: transparent !important;
+}
+
+.select svg[data-testid="PersonOutlineIcon"] {
 	max-height: 1.25rem;
 }
 
-.secondary-select > svg:last-child {
+.select > svg:last-child {
 	color: #c3c3c4;
 	margin-right: 0.5rem;
 	width: 1.25rem;
 }
 
-.secondary-select {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
+.selected {
+	background-color: #4c5667 !important;
+}
+
+.settings-row {
+	align-items: center;
+	cursor: default !important;
+	display: flex;
+	justify-content: left;
+	gap: 1rem;
+	padding: 0 1rem;
+}
+
+.textfield-disabled input {
+	-webkit-text-fill-color: #c3c3c4 !important;
+}
+
+#date-range-container {
+	flex: 2 !important;
+}
+
+#date-range-container > * {
+	width: 100%;
+}
+
+#date-range-container > div {
+	display: flex;
+	gap: 1rem;
+}
+
+#date-range-popover .MuiPickersLayout-root {
+	background-color: transparent;
+}
+
+#date-range-popover .MuiTabs-root {
+	padding: 0 1rem;
+}
+
+#date-range-popover .MuiTextField-root {
+	width: 100%;
+}
+
+#date-range-popover-row {
+	cursor: default !important;
+	display: flex;
+}
+
+#duration-container {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	padding: 1rem;
+}
+
+#flex-date-container {
+	display: flex;
+	padding: 1rem 1rem 0 1rem;
+	width: 100%;
 }
 
 #middle-row {
@@ -132,19 +251,28 @@ li,
 	justify-content: space-around;
 }
 
+#middle-row > button {
+	transition: transform 0.25s;
+}
+
 #middle-row > div {
-	flex: 1 1;
+	flex: 1;
 	min-width: 6rem;
 }
 
-#number-options {
-	display: flex;
-	gap: 0.25rem;
-	justify-content: flex-end;
-	padding: 0.5rem 1rem;
+#middle-row > div .MuiOutlinedInput-notchedOutline:hover {
+	border-color: white !important;
 }
 
-#number-options button {
-	border-radius: 1rem;
-	padding: 0.375rem 1rem;
+#middle-row > div:last-child > div > div {
+	cursor: text;
+}
+
+#middle-row > div:last-child .MuiOutlinedInput-notchedOutline {
+	pointer-events: auto !important;
+}
+
+#settings-popover {
+	display: flex;
+	flex-direction: column;
 }
