Added hero animations

--- a/src/Form.css
+++ b/src/Form.css
@@ -29,6 +29,10 @@ form .MuiAutocomplete-input {
 	text-overflow: clip !important;
 }
 
+.MuiDateCalendar-root {
+	width: auto !important;
+}
+
 .MuiDayCalendar-weekContainer .Mui-selected {
 	color: white !important;
 }
