--- a/src/Form.css
+++ b/src/Form.css
@@ -9,10 +9,6 @@ form {
 	width: 100%;
 }
 
-form svg[data-testid="CalendarMonthIcon"] {
-	color: white !important;
-}
-
 form svg[data-testid="ArrowDropDownIcon"] {
 	transition: transform 0.35s;
 }
@@ -21,16 +17,8 @@ form > div:first-child {
 	margin-bottom: 0.5rem;
 }
 
-form > div:first-child .selected svg[data-testid="ArrowDropDownIcon"] {
-	transform: rotate(180deg);
-}
-
 form > div:last-child {
 	text-align: center;
-}
-
-form .MuiAutocomplete-input {
-	text-overflow: clip !important;
 }
 
 .error-link {
@@ -64,126 +52,23 @@ form .MuiAutocomplete-input {
 	color: lightgreen;
 }
 
-.MuiDateCalendar-root {
-	width: auto !important;
-}
-
-.MuiDayCalendar-weekContainer .Mui-selected {
-	color: white !important;
-}
-
-.MuiDayCalendar-weekDayLabel {
-	margin: 0 !important;
-}
-
-.MuiPickersDay-root {
-	border: none !important;
-	margin: 0 !important;
-	transition: none !important;
-}
-
 .input-row {
 	align-items: center;
 	display: flex;
 	width: 100%;
 }
 
-.input-row:first-child {
-	justify-content: space-between;
-}
-
-.input-row:first-child > * {
-	color: #c3c3c4 !important;
-}
-
 .input-row > div {
 	display: flex;
+}
+
+.Mui-disabled .MuiOutlinedInput-notchedOutline {
+	border-color: rgba(255, 255, 255, 0.23) !important;
 }
 
 .MuiIconButton-root:hover,
 .not-selected:hover {
 	background-color: #3d4149 !important;
-}
-
-.number-button-disabled {
-	background-color: #4c4d50;
-	pointer-events: none;
-	transition: all 0.15s linear;
-}
-
-.number-button-disabled svg {
-	color: #606064;
-	transition: all 0.15s linear;
-}
-
-.number-button-enabled {
-	background-color: #394457;
-	cursor: pointer;
-	transition: all 0.15s linear;
-}
-
-.number-button-enabled:hover {
-	background-color: #3e495e;
-}
-
-.number-button-enabled svg {
-	color: #dbdde1;
-	transition: all 0.15s linear;
-}
-
-.number-row {
-	cursor: default !important;
-	display: flex;
-	gap: 2rem;
-	justify-content: space-between !important;
-}
-
-.number-row:hover {
-	background-color: transparent !important;
-}
-
-.number-row button {
-	align-items: center;
-	border: none;
-	border-radius: 0.25rem;
-	cursor: pointer;
-	display: flex;
-	justify-content: center;
-	padding: 0.35rem;
-}
-
-.number-row button svg {
-	height: 1.25rem;
-	width: 1.25rem;
-}
-
-.number-row > div:first-child {
-	display: flex;
-	flex-direction: column;
-}
-
-.number-row > div:first-child span {
-	width: min-content;
-}
-
-.number-row > div:first-child span:last-child {
-	font-size: 0.75rem;
-}
-
-.number-row > div:last-child {
-	align-items: center;
-	display: flex;
-	gap: 1rem;
-}
-
-.number-row > div:last-child span {
-	width: 1rem;
-}
-
-.number-row div span,
-#date-range-popover li {
-	background-color: transparent !important;
-	color: #c3c3c4 !important;
 }
 
 .options {
@@ -198,10 +83,18 @@ form .MuiAutocomplete-input {
 	padding: 0.375rem 1rem;
 }
 
+.secondary-input {
+	justify-content: space-between;
+}
+
+.secondary-input .select {
+	color: #c3c3c4 !important;
+	font-size: 0.9rem !important;
+}
+
 .select {
 	border-radius: 0.25rem;
 	color: #c3c3c4 !important;
-	font-size: 0.9rem !important;
 	padding-left: 0.75rem;
 	padding-right: 0.75rem;
 }
@@ -228,111 +121,64 @@ form .MuiAutocomplete-input {
 	background-color: #4c5667 !important;
 }
 
-.settings-row {
-	align-items: center;
-	cursor: default !important;
-	display: flex;
-	justify-content: left;
-	gap: 1rem;
-	padding: 0 1rem;
-}
-
-.textfield-disabled input {
-	-webkit-text-fill-color: #c3c3c4 !important;
-}
-
-#date-range-container {
-	flex: 1;
-	min-width: 16rem;
-}
-
-#date-range-container > * {
-	width: 100%;
-}
-
-#date-range-container > div {
-	display: flex;
-	gap: 1rem;
-}
-
-#date-range-container input {
-	text-align: center;
-}
-
-#date-range-popover .MuiPickersLayout-root {
-	background-color: transparent;
-}
-
-#date-range-popover .MuiTabs-root {
-	padding: 0 1rem;
-}
-
-#date-range-popover .MuiTextField-root {
-	width: 100%;
-}
-
-#date-range-popover-row {
-	cursor: default !important;
-	display: flex;
-}
-
-#duration-container {
-	display: flex;
-	flex-wrap: wrap;
-	gap: 1rem;
-	padding: 1rem;
-}
-
-#flex-date-container {
-	display: flex;
-	padding: 1rem 1rem 0 1rem;
-	width: 100%;
-}
-
-#middle-row {
+#primary-input {
 	flex-wrap: wrap;
 	gap: 1rem;
 	justify-content: space-around;
 }
 
-#middle-row > button {
+#primary-input > * {
+	height: 100%;
+}
+
+#primary-input button {
+	border-color: rgba(255, 255, 255, 0.23);
 	transition: transform 0.25s;
 }
 
-#middle-row .MuiAutocomplete-root {
+#primary-input > div .MuiButton-outlined:hover,
+#primary-input .MuiOutlinedInput-notchedOutline:hover {
+	border-color: white !important;
+}
+
+#primary-input div:first-child,
+#primary-input .select {
+	flex: 1;
+}
+
+#primary-input > div:last-child > div > div {
+	cursor: text;
+}
+
+#primary-input > div:last-child .MuiOutlinedInput-notchedOutline {
+	pointer-events: auto !important;
+}
+
+#primary-input .MuiAutocomplete-root {
 	flex: 1;
 	min-width: 8rem;
 }
 
-#middle-row > div .MuiOutlinedInput-notchedOutline:hover {
-	border-color: white !important;
+#primary-input .Mui-focused .MuiOutlinedInput-notchedOutline,
+#primary-input .MuiOutlinedInput-notchedOutline {
+	border-width: 1px;
 }
 
-#middle-row > div:last-child > div > div {
-	cursor: text;
-}
-
-#middle-row > div:last-child .MuiOutlinedInput-notchedOutline {
-	pointer-events: auto !important;
-}
-
-#settings-popover {
-	display: flex;
-	flex-direction: column;
+#search-info {
+	font-size: 0.9rem;
+	gap: 0.5rem;
+	justify-content: flex-start;
+	padding: 6px;
 }
 
 @media all and (max-width: 480px) {
-	#date-range-popover-row {
-		flex-wrap: wrap;
-	}
-
 	#error-text {
 		justify-content: center;
 		left: 0;
 		width: 100%;
 	}
 
-	#middle-row .MuiAutocomplete-root {
+	#primary-input .MuiAutocomplete-root {
 		min-width: auto;
 	}
 }
