--- a/src/About.css
+++ b/src/About.css
@@ -1,100 +1,69 @@
-figcaption a {
-	font-size: 1rem !important;
-}
-
 .section-container {
-	background-color: rgba(0, 0, 0, 0.85);
+	align-items: center;
+	background-color: rgb(54, 55, 58);
+	box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3), 0 4px 8px 3px rgba(0, 0, 0, 0.15);
 	border-radius: 1.5rem;
+	display: flex;
 	flex-direction: column;
+	gap: 2rem;
+	justify-content: space-around;
 	padding: 2rem;
 }
 
-.section-container a {
-	font-size: 1.25rem;
-}
-
-.section-container b,
-.section-container li,
 .section-container p {
 	font-size: 1.25rem;
-}
-
-.section-container h1 {
-	font-size: 3rem;
-}
-
-.section-container img {
-	border-radius: 0.5rem;
-	width: calc(60%);
-}
-
-.section-container ol {
-	list-style-position: inside;
-}
-
-.section-container,
-#back-button-container {
-	align-items: center;
-	display: flex;
-	gap: 2rem;
-	justify-content: space-around;
+	text-align: center;
 }
 
 #about-container {
-	flex-direction: column;
+	gap: 2rem;
 	padding: 2rem 0;
 }
 
-#about-me-container {
-	align-items: center;
+#meet-the-devs-container {
 	display: flex;
-	gap: 2rem;
 }
 
-#about-me-container img {
-	border-radius: 3rem;
+#meet-the-devs-container div {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	padding: 0 7.5%;
 	width: 50%;
 }
 
-#about-me-container > * {
-	flex: 1;
+#meet-the-devs-container figcaption:first-of-type {
+	font-size: 1.75rem;
+	text-align: center;
 }
 
-#back-button-container {
-	background-color: red;
-	border-radius: 1rem;
-	padding: 2rem;
-	text-decoration: none;
-	transition: background-color 0.25s;
-	white-space: nowrap;
-	width: min-content;
+#meet-the-devs-container figcaption:last-of-type {
+	text-align: center;
 }
 
-#back-button-container p {
-	font-size: 1.25rem;
+#meet-the-devs-container img {
+	border-radius: 50%;
+	box-shadow: rgb(32, 33, 36) 0.5rem 0.5rem;
+	margin-bottom: 0.5rem;
+	width: 100%;
 }
 
-#back-button-container:hover {
-	background-color: rgb(200, 0, 0);
-}
-
-@media all and (min-width: 1100px) {
-	.section-container {
-		max-width: 70%;
-	}
+#meet-the-devs-container p {
+	text-align: center;
 }
 
 @media all and (max-width: 480px) {
-	.section-container figure {
-		margin: 1rem 0;
-		width: 100%;
-	}
-
-	.section-container img {
-		width: 100%;
-	}
-
-	#about-me-container {
+	#meet-the-devs-container {
 		flex-direction: column;
+		gap: 4rem;
+	}
+
+	#meet-the-devs-container div {
+		width: 100%;
+	}
+
+	#meet-the-devs-container figure {
+		width: 75%;
 	}
 }
