--- a/src/AppRouter.css
+++ b/src/AppRouter.css
@@ -1,7 +1,11 @@
 main {
+	align-items: center;
 	background: rgb(32, 33, 36);
 	display: flex;
+	flex: 1;
+	flex-direction: column;
 	justify-content: center;
+	position: relative;
 	width: 100vw;
 }
 
@@ -10,6 +14,9 @@ main {
 }
 
 .main-container {
+	display: flex;
+	flex: 1;
+	flex-direction: column;
 	overflow-y: hidden;
 	width: 50%;
 }
