--- a/src/Map.css
+++ b/src/Map.css
@@ -1,17 +1,15 @@
 #map-container {
 	filter: drop-shadow(0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.7));
-	height: 100%;
-	padding: 2.25rem 0 1rem 0;
+	flex: 1;
 	position: relative;
 	width: 100%;
 }
 
 #map-svg {
 	border-radius: 1.5rem;
-	height: calc(100% - 3.25rem);
+	height: 100%;
 	left: 0;
-	position: absolute;
-	top: 2.25rem;
+	padding: 1rem 0;
 	width: 100%;
 }
 
@@ -22,7 +20,7 @@
 	left: 0;
 	padding: 0.75rem;
 	position: absolute;
-	top: 2.25rem;
+	top: 1rem;
 }
 
 #zoom-out-button {
@@ -32,10 +30,16 @@
 	pointer-events: auto;
 	position: absolute;
 	right: 0;
-	top: 2.25rem;
+	top: 1rem;
 	transition: transform 0.25s;
 }
 
 #zoom-out-button:hover {
 	transform: scale(1.25);
+}
+
+@media all and (max-width: 480px) {
+	#map-svg {
+		height: 100%;
+	}
 }
