--- a/src/Option.css
+++ b/src/Option.css
@@ -88,7 +88,7 @@
 	color: #9aa0a6;
 	display: flex;
 	font-size: 0.9rem;
-	gap: 0.5rem;
+	gap: 0.25rem;
 }
 
 .leg-accommodation-container div span {
@@ -152,7 +152,13 @@
 }
 
 @media all and (max-width: 480px) {
+	.leg-accommodation-container {
+		max-width: 100%;
+		width: 100%;
+	}
+
 	.leg-container {
+		flex-direction: column;
 		gap: 1rem;
 	}
 
