--- a/src/Filters.css
+++ b/src/Filters.css
@@ -14,6 +14,7 @@
 
 .filter-button {
 	white-space: nowrap;
+	padding: 5px 15px;
 }
 
 .popover-filter {
@@ -59,6 +60,7 @@
 	display: flex;
 	overflow-x: scroll;
 	gap: 1rem;
+	margin-top: 0.75rem;
 }
 
 #filters::-webkit-scrollbar {
