--- a/src/Fares.css
+++ b/src/Fares.css
@@ -1,34 +1,6 @@
-.MuiAreaElement-root {
-	fill: url(#chart-gradient) !important;
-	fill-opacity: 0.1;
-}
-
-.MuiLineElement-root {
-	stroke: rgb(70, 147, 255) !important;
-}
-
 .MuiTablePagination-root {
 	display: flex;
 	justify-content: center;
-}
-
-#chart-container {
-	height: 10rem;
-	overflow: hidden;
-	position: relative;
-}
-
-#chart-container > div {
-	position: absolute;
-}
-
-#chart-container > div:last-child {
-	animation: 3s chart-slide-in;
-	background: rgb(32, 33, 36);
-	bottom: 0;
-	height: 90%;
-	left: 96%;
-	width: 100%;
 }
 
 #date-time-requested {
@@ -39,13 +11,17 @@
 	display: flex;
 	flex: 1;
 	flex-direction: column;
+	gap: 1rem;
 	height: 100%;
+	margin-top: 1rem;
 	padding: 1rem;
 	width: 100%;
 }
 
 #fares-container > div:last-child {
-	margin-top: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 0.5rem;
 }
 
 #fares-filters {
@@ -60,10 +36,6 @@
 	align-items: center;
 	display: flex;
 	gap: 0.5rem;
-}
-
-#fares-filters > div:nth-last-of-type(2) {
-	color: #9aa0a6;
 }
 
 #no-options-container {
@@ -96,15 +68,6 @@
 	height: 3rem;
 }
 
-@keyframes chart-slide-in {
-	from {
-		left: 0;
-	}
-	to {
-		left: 96%;
-	}
-}
-
 @media all and (max-width: 480px) {
 	.MuiTablePagination-actions > button {
 		padding: 0.25rem !important;
@@ -121,6 +84,6 @@
 
 	#fares-filters {
 		justify-content: center;
-		margin: 1rem 0;
+		margin-top: 1rem;
 	}
 }
