--- a/src/Donation.css
+++ b/src/Donation.css
@@ -18,7 +18,7 @@
 }
 
 #budget-container .high-funding {
-	color: rgba(129, 201, 149, 0.25);
+	color: #81c995;
 }
 
 #budget-container .low-funding {
