--- a/src/Footer.css
+++ b/src/Footer.css
@@ -24,6 +24,10 @@ footer > div {
 	gap: 0.5rem;
 }
 
+footer img {
+	height: 1.5rem;
+}
+
 footer > span:first-child {
 	cursor: pointer;
 	text-decoration: underline;
