--- a/src/Map.css
+++ b/src/Map.css
@@ -18,6 +18,8 @@
 	background-color: rgba(255, 255, 255, 0.9);
 	border-radius: 1rem 0 1rem 0;
 	color: black;
+	display: flex;
+	gap: 0.5rem;
 	left: 0;
 	padding: 0.75rem;
 	position: absolute;
